--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- <li><a href="https://bit.ly/32p4H0C">Design</a></li> -->
             <li><a href="https://b-ok.africa/">Reading Books</a></li>
             <li><a href="https://bit.ly/3JkCpF1">Traveling</a></li>
-            <li><a href="https://bit.ly/32pGdnN">Swimming</a></li>
+            <li><a href="">Swimming</a></li>
             <li><a href="https://www.yogaeasy.de/">Yoga</a></li>
             <li><a href="https://unsplash.com/">Photographing</a></li>
 
